...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGoalActivity"
    android:background="@color/orange">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_create_goal"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Create your goal" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="Title"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_content"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

...
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Tag"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_tag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
...
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Milestone 1"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_milestone1"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/milestone1_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="top"
                android:textColor="@color/black"
                android:hint="Set Milestone 1 Deadline" />
...
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="Milestone 2"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_milestone2"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/milestone2_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="top"
                android:textColor="@color/black"
                android:hint="Set Milestone 2 Deadline" />
...
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:hint="Milestone 3"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_goal_milestone3"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:gravity="top"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/milestone3_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="top"
                android:textColor="@color/black"
                android:hint="Set Milestone 3 Deadline" />
            <TextView
                android:id="@+id/goal_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="17dp"
                android:gravity="top"
                android:hint="Set Goal Deadline" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_create_goal"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:enabled="false"
                android:onClick="createGoal"
                android:text="create goal" />


        </LinearLayout>
        </ScrollView>


...
